			Java Electric change log

************************* Version 8.01k: *********************************

BUG: (8/26/04, DN) Network tool keeps global nets after deleting global and power symbols.
FIX: Don't traverse self icon when gathering globals.

BUG: (8/25/04, JKG) Automatic reinheritance of default parameters inside getVar() was a
    bad idea. Call ElectricObject.getParameter() or ElectricObject.getParameters() if you
    want the returned variables to include default parameter variables.

IMP/MAN: (8/25/04, JKG) Added File Menu -> Page Setup... command

BUG: (8/25//04, GVG) MoCMOS wrong min spacing for active in different implants (Same problem in C-Electric)
FIX: 4 instead of 3

IMP: for a given pair, DRC only reports errors once.

IMP/MAN: (8/25/04, SMR) "Array" dialog allows negative array amounts to create
     arrays in the other direction.

BUG: (8/24/04, SMR) Verilog output sometimes writes 2 connections for a transistor instead of 3.
FIX: Do not remove ports that are electrically connected.

BUG: (8/24/04, SMR) Verilog output scrambles bus signals, failing to aggregate them properly.
FIX: In "tool.io.output.Topology.doGetNetworks()" assigned export names properly.

IMP: (8/24/04, SMR) Verilog output now prepends library name to all module names.

************************* Version 8.01j: *********************************

BUG: (8/24/04, GVG) MoCMOS via4 spacing rule was found as wide rule. NOTE: Also found in C-Electric
FIX: Transformed into standard spacing rule

BUG: (8/23/04, GVG) DRC and wide rules in MoCMOS not properly translated to new data structure
     (Metal2-Metal3 wide distance setup calling wrong constructor)
FIX: Adding missing argument (WIDELIMIT)

IMP/MAN: (8/22/04, JKG) Added mouse-over highlighter. To disable if necessary, set
     ClickZoomWireListener.useMouseOverHighlighter to false.
     Controlled with "Selection" and "Color" tabs of Preferences.

BUG: (8/22/04, JKG) From Justin: double clicking in library explorer