@@ -584,8 +584,10 @@ public class EditWindow extends JPanel
 	public void paint(Graphics g)
 	{
 		// to enable keys to be received
+		/*
 		if (cell != null && cell == WindowFrame.getCurrentCell())
 			requestFocus();
+			*/
 
 		// redo the explorer tree if it changed
 		//wf.redoExplorerTreeIfRequested();
