@@ -1,9 +1,12 @@
 			Java Electric change log
 
-************************* Version 8.01k: *********************************
+************************* Version 8.01l: *********************************
+IMP: (08/26/04) Hierarchical minimum area and enclosed area available in DRC.
 
 BUG: (8/26/04, DN) Network tool keeps global nets after deleting global and power symbols.
 FIX: Don't traverse self icon when gathering globals.
+
+************************* Version 8.01k: *********************************
 
 BUG: (8/25/04, JKG) Automatic reinheritance of default parameters inside getVar() was a
     bad idea. Call ElectricObject.getParameter() or ElectricObject.getParameters() if you
